--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
 
 @import "../../node_modules/basicui/styles/index.css";
 @import "../../node_modules/authlite-form-widgets/styles/index.css";
@@ -13,7 +14,11 @@
   --app-layout-sidebar-width: 300px;
   --app-layout-sidebar-width-shrinked: 75px;
   --app-layout-topbar-height: 42px;
-  font-family: Roboto;
+  /* font-family: Roboto; */
+}
+
+* {
+  font-family: Work Sans, sans-serif;
 }
 .basicui-light {
   --global-background-color: var(--theme-white-200);
@@ -70,7 +75,7 @@ code {
   align-items: center;
   justify-content: space-between;
 }
-* .user-form {
+* .objective-question__form {
   display: grid;
   grid-auto-flow: row;
 }
