--- a/src/components/MainPage/style.css
+++ b/src/components/MainPage/style.css
@@ -1,6 +1,40 @@
+.main-page-container {
+  display: grid;
+  min-height: calc(100vh - 42px);
+  max-width: calc(100vw - 42px);
+  margin: auto;
+}
 .main-page {
-  width: 500px;
-  background-color: var(--basicui-bg-surface);
-  padding: 12px;
-  border-radius: 4px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 24px;
+  /* margin-top: 42px; */
+  background-color: var(--basicui-bg-accent);
+  border-radius: 36px;
+  /* min-height: calc(100vh - 42px - 100px); */
+  margin: auto;
+  width: 980px;
+  max-width: calc(100vw - 42px);
+  min-height: calc(100vh - 42px - 42px - 42px);
+}
+
+.main-page__left ,.main-page__right{
+    display: grid;
+    width: 100%;
+    align-content: center;
+  }
+  
+.main-page__left {
+  background-color: #e1f8fe;
+  color: #007ba0;
+  /* margin: 4px; */
+  padding: 24px;
+  border-radius: 36px 0 0 36px;
+}
+.basicui-dark .main-page__left {
+  background-color: #417584;
+  color: #ffffff;
+}
+.main-page__right {
+  padding: 24px;
 }
