--- a/src/components/MainPage/style.css
+++ b/src/components/MainPage/style.css
@@ -7,7 +7,7 @@
 .main-page {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 24px;
+  /* column-gap: 24px; */
   /* margin-top: 42px; */
   background-color: var(--basicui-bg-accent);
   border-radius: 12px;
@@ -36,5 +36,5 @@
   color: #ffffff;
 }
 .main-page__right {
-  padding: 24px 0px 24px 24px;
+  padding: 24px;
 }
