--- a/src/components/UserForm/Assessment.css
+++ b/src/components/UserForm/Assessment.css
@@ -29,6 +29,7 @@
 .objective-question__form__action {
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
 }
 
 .objective-question__form .basicui-radio {
