--- a/src/components/Timer/style.css
+++ b/src/components/Timer/style.css
@@ -1,23 +1,23 @@
 .timer-display {
   display: flex;
   flex-direction: row;
-  gap: 10px;
+  gap: 6px;
   background-color: #e1f5fe;
-  width: 7.5em;
-  border-radius: 1.8em;
+  border-radius: 100px;
+  color: var(--theme-primary-700);
   align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px;
-  height: 32px;
+  padding: var(--basicui-button-padding);
+  height: var(--basicui-formelement-height);
 }
 
 .timer-display p {
   margin: 0;
+  font-size: 12px;
 }
 
 .timer-display svg {
-  height: 20px;
-  width: 20px;
+  height: 16px;
+  width: 16px;
   color: var(--theme-primary-700);
 }
 
@@ -26,7 +26,7 @@
 }
 
 .change-bg-color {
-  background-color: #a3112024;
+  background-color: #efdadd;
 }
 
 .blink {
